# kopete-smpppdcs

./: CMakeLists.txt
plugins/smpppdcs/: CMakeLists.txt  Messages.sh  detectordcop.cpp  kinternetiface.h  kopete_smpppdcs.desktop  kopete_smpppdcs_config.desktop  smpppdcsiface.h  smpppdcsplugin.cpp  smpppdcsplugin.h  smpppdcspreferences.cpp  smpppdcspreferences.h  smpppdcsprefs.ui  smpppdcsprefsimpl.cpp  smpppdcsprefsimpl.h  smpppdlocationui.ui  smpppdlocationwidget.cpp  smpppdlocationwidget.h  smpppdsearcher.cpp  smpppdsearcher.h
plugins/smpppdcs/libsmpppdclient/: smpppdclient.cpp  smpppdready.cpp  smpppdstate.cpp  smpppdstate.h  smpppdunsettled.cpp
plugins/smpppdcs/unittest/: CMakeLists.txt
